# HighwayPatrol

./: .gitignore  app.py  cdk.json  devRequirements.txt  getBaseStackName.sh  getVersion.sh  prepCliExecution.sh  runCdk.sh
.github/workflows/: deploy.yml
projectResources/: SystemArchitecture.pptx  monitor-to-enable diagram.pptx
scripts/: runTests.sh
stacks/: collectionStack.py  commonStackFunctions.py  frankfurtStack.py  initStack.py  monitoringStack.py  novaStack.py  processingStack.py  seoulStack.py  singaporeStack.py  stockholmStack.py  vpcStack.py  vpnStack.py  zurichStack.py
stacks/common/src/python/orangeUtils/: .gitrepo  auditUtils.py  awsUtils.py  loggerSetup.py  networkUtils.py  pyproject.toml  timeUtils.py  utils.py
stacks/common/src/python/orangeUtils/examples/: utils.py
stacks/common/testResources/: EarthCam - Bellagio Conservatory Cam.html  EarthCam - Las Vegas Cams.html  Maps.UfaNet.ru.html  NovoSibirsk.html  Ths3QZZN_RTSP.ME.html  Ths3QZZN_RTSP.ME.js  YTSeoul.html  YTnoCookieEmbed.html  YTplayerParams.json  aimpoint-firstContactCookie.json  aimpoint-firstContactRegex.json  aimpoint-firstContactRegexJson.json  aimpoint-fstlls.json  aimpoint-gandong.json  aimpoint-hngscloud.json  aimpoint-iVideon.json  aimpoint-imageInJson.json  aimpoint-ipCamLive.json  aimpoint-istlls.json  (+16 more)
stacks/ecsResources/: logError.py
stacks/historian/: testResources
stacks/protonVpnProxy/: bootstrapProtonVpnProxy.sh  protonContainerRequirements.txt  protonDockerfile  protonVpnCountryCodes.py
stacks/systemResources/: deploymentSettings.yaml  lambdaRequirements.txt
(+142 files in other folders)
